// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomerMenu renders Preloader when fetching 1`] = `
<View
  isFetching={true}
  logout={[MockFunction]}
  showTime={true}
  type="menu"
  user={
    Object {
      "email": "emiola@olasanmi.com",
      "firstname": "Emiola",
      "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
      "lastname": "Olasanmi",
      "role": "customer",
    }
  }
>
  <div
    className="content-wrapper meals user-meals"
  >
    <div
      className="user-menu"
    >
      <div
        className="main-menu"
      >
        <div
          className="page-heading"
        >
          <h2>
            Today's Menu
          </h2>
          <hr />
        </div>
        <React.Fragment>
          <div
            className="card-group meals-wrapper"
            id="card-group"
          >
            <MealCard
              key="81211c24-51c0-46ec-b1e0-18db55880958"
              meal={
                Object {
                  "description": "Jollof Rice, Beef and Plantain. 2 pieces of beef per plate",
                  "id": "81211c24-51c0-46ec-b1e0-18db55880958",
                  "imageURL": "http://www.preciouscore.com/wp-content/uploads/2017/11/How-to-cook-jollof-rice-in-the-oven-750x500.jpg",
                  "price": "1500.00",
                  "title": "Jollof Rice, Beef and Plantain",
                  "vegetarian": false,
                }
              }
              orderMeal={[Function]}
              toggleModal={null}
              type="customer"
            />
            <MealCard
              key="36d525d1-efc9-4b75-9999-3e3d8dc64ce3"
              meal={
                Object {
                  "description": "Sharwama contains no animal products, perfect for dieters",
                  "id": "36d525d1-efc9-4b75-9999-3e3d8dc64ce3",
                  "imageURL": "https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg?auto=compress&cs=tinysrgb&h=350",
                  "price": "1200.00",
                  "title": "Vegetable Sharwama and Guava Smoothie",
                  "vegetarian": true,
                }
              }
              orderMeal={[Function]}
              toggleModal={null}
              type="customer"
            />
          </div>
        </React.Fragment>
      </div>
      <Cart
        handleQuantityInputChange={[Function]}
        order={Array []}
        removeOrderItem={[Function]}
      />
    </div>
  </div>
</View>
`;

exports[`CustomerMenu renders connected component 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(CustomerMenu)
    meals={
      Array [
        Object {
          "description": "Jollof Rice, Beef and Plantain. 2 pieces of beef per plate",
          "id": "81211c24-51c0-46ec-b1e0-18db55880958",
          "imageURL": "http://www.preciouscore.com/wp-content/uploads/2017/11/How-to-cook-jollof-rice-in-the-oven-750x500.jpg",
          "price": "1500.00",
          "title": "Jollof Rice, Beef and Plantain",
          "vegetarian": false,
        },
        Object {
          "description": "Sharwama contains no animal products, perfect for dieters",
          "id": "36d525d1-efc9-4b75-9999-3e3d8dc64ce3",
          "imageURL": "https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg?auto=compress&cs=tinysrgb&h=350",
          "price": "1200.00",
          "title": "Vegetable Sharwama and Guava Smoothie",
          "vegetarian": true,
        },
      ]
    }
    user={
      Object {
        "email": "emiola@olasanmi.com",
        "firstname": "Emiola",
        "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
        "lastname": "Olasanmi",
        "role": "customer",
      }
    }
  >
    <CustomerMenu
      fetchMenu={[Function]}
      isFetching={false}
      logout={[Function]}
      meals={
        Array [
          Object {
            "description": "Jollof Rice, Beef and Plantain. 2 pieces of beef per plate",
            "id": "81211c24-51c0-46ec-b1e0-18db55880958",
            "imageURL": "http://www.preciouscore.com/wp-content/uploads/2017/11/How-to-cook-jollof-rice-in-the-oven-750x500.jpg",
            "price": "1500.00",
            "title": "Jollof Rice, Beef and Plantain",
            "vegetarian": false,
          },
          Object {
            "description": "Sharwama contains no animal products, perfect for dieters",
            "id": "36d525d1-efc9-4b75-9999-3e3d8dc64ce3",
            "imageURL": "https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg?auto=compress&cs=tinysrgb&h=350",
            "price": "1200.00",
            "title": "Vegetable Sharwama and Guava Smoothie",
            "vegetarian": true,
          },
        ]
      }
      user={
        Object {
          "email": "emiola@olasanmi.com",
          "firstname": "Emiola",
          "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
          "lastname": "Olasanmi",
          "role": "customer",
        }
      }
    >
      <View
        isFetching={false}
        logout={[Function]}
        showTime={true}
        type="menu"
        user={
          Object {
            "email": "emiola@olasanmi.com",
            "firstname": "Emiola",
            "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
            "lastname": "Olasanmi",
            "role": "customer",
          }
        }
      >
        <div
          className="admin user"
        >
          <Header
            active="menu"
            dateType="menu"
            logout={[Function]}
            showTime={true}
            type="customer"
            user={
              Object {
                "email": "emiola@olasanmi.com",
                "firstname": "Emiola",
                "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
                "lastname": "Olasanmi",
                "role": "customer",
              }
            }
          >
            <div
              className="header"
            >
              <div
                className="navbar white-navbar"
              >
                <CustomerHeader
                  active="menu"
                  dateType="menu"
                  logout={[Function]}
                  showTime={true}
                  type="customer"
                  user={
                    Object {
                      "email": "emiola@olasanmi.com",
                      "firstname": "Emiola",
                      "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
                      "lastname": "Olasanmi",
                      "role": "customer",
                    }
                  }
                >
                  <div
                    className="page-title"
                  >
                    <h3>
                      <Link
                        href="/"
                        replace={false}
                        to="/"
                      >
                        <a
                          href="/"
                          onClick={[Function]}
                        >
                          BOOK-A-MEAL
                        </a>
                      </Link>
                    </h3>
                  </div>
                  <div
                    className="navlinks"
                  >
                    <div
                      className="user-info"
                    >
                      <Dropdown
                        content={
                          <UNDEFINED>
                            <Link
                              className="active"
                              href="/"
                              replace={false}
                              to="/"
                            >
                              Menu
                            </Link>
                            <Link
                              href="/"
                              replace={false}
                              to="/"
                            >
                              Order History
                            </Link>
                            <Link
                              href="/"
                              onClick={[Function]}
                              replace={false}
                              to="/"
                            >
                              Logout
                            </Link>
                          </UNDEFINED>
                        }
                        toggler={
                          <div
                            className="username-circle circle-click"
                          >
                            <p
                              className="circle-click"
                            >
                              E
                              ▿
                            </p>
                          </div>
                        }
                        type="customer"
                      >
                        <div
                          className="dropdown"
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          <Link
                            className="link"
                            clickHandler={[Function]}
                            id="dropdown-toggler"
                          >
                            <button
                              className="link-btn link"
                              id="dropdown-toggler"
                              onClick={[Function]}
                            >
                              <div
                                className="username-circle circle-click"
                              >
                                <p
                                  className="circle-click"
                                >
                                  E
                                  ▿
                                </p>
                              </div>
                            </button>
                          </Link>
                          <div
                            className="dropdown-content"
                            id="dropdown-content"
                          >
                            <Link
                              className="active"
                              href="/"
                              replace={false}
                              to="/"
                            >
                              <a
                                className="active"
                                href="/"
                                onClick={[Function]}
                              >
                                Menu
                              </a>
                            </Link>
                            <Link
                              href="/"
                              replace={false}
                              to="/"
                            >
                              <a
                                href="/"
                                onClick={[Function]}
                              >
                                Order History
                              </a>
                            </Link>
                            <Link
                              href="/"
                              onClick={[Function]}
                              replace={false}
                              to="/"
                            >
                              <a
                                href="/"
                                onClick={[Function]}
                              >
                                Logout
                              </a>
                            </Link>
                          </div>
                        </div>
                      </Dropdown>
                      <p>
                          
                        Emiola
                      </p>
                    </div>
                  </div>
                </CustomerHeader>
              </div>
            </div>
          </Header>
          <div
            className="content"
          >
            <div
              className="content-wrapper"
              id="has-modal"
            >
              <div
                className="content-wrapper meals user-meals"
              >
                <div
                  className="user-menu"
                >
                  <div
                    className="main-menu"
                  >
                    <div
                      className="page-heading"
                    >
                      <h2>
                        Today's Menu
                      </h2>
                      <hr />
                    </div>
                    <div
                      className="card-group meals-wrapper"
                      id="card-group"
                    >
                      <MealCard
                        key="81211c24-51c0-46ec-b1e0-18db55880958"
                        meal={
                          Object {
                            "description": "Jollof Rice, Beef and Plantain. 2 pieces of beef per plate",
                            "id": "81211c24-51c0-46ec-b1e0-18db55880958",
                            "imageURL": "http://www.preciouscore.com/wp-content/uploads/2017/11/How-to-cook-jollof-rice-in-the-oven-750x500.jpg",
                            "price": "1500.00",
                            "title": "Jollof Rice, Beef and Plantain",
                            "vegetarian": false,
                          }
                        }
                        orderMeal={[Function]}
                        toggleModal={null}
                        type="customer"
                      >
                        <div
                          className="meal-card order-meal-card"
                          id="meal-card"
                        >
                          <div
                            className="meal-card-header"
                          >
                            <img
                              alt="meal"
                              src="http://www.preciouscore.com/wp-content/uploads/2017/11/How-to-cook-jollof-rice-in-the-oven-750x500.jpg"
                            />
                            <div
                              className="menu-card-title"
                            >
                              <p>
                                Jollof Rice, Beef and Plantain
                              </p>
                            </div>
                          </div>
                          <div
                            className="meal-card-body"
                          >
                            <div>
                              <h3>
                                ₦ 
                                1500.00
                              </h3>
                              <p>
                                Jollof Rice, Beef and Plantain. 2 pieces of beef per plate
                              </p>
                            </div>
                            <div
                              className="meal-card-action"
                            >
                              <button
                                className="btn btn-sec meal-card-btn"
                                onClick={[Function]}
                              >
                                Click to Order
                              </button>
                            </div>
                          </div>
                        </div>
                      </MealCard>
                      <MealCard
                        key="36d525d1-efc9-4b75-9999-3e3d8dc64ce3"
                        meal={
                          Object {
                            "description": "Sharwama contains no animal products, perfect for dieters",
                            "id": "36d525d1-efc9-4b75-9999-3e3d8dc64ce3",
                            "imageURL": "https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg?auto=compress&cs=tinysrgb&h=350",
                            "price": "1200.00",
                            "title": "Vegetable Sharwama and Guava Smoothie",
                            "vegetarian": true,
                          }
                        }
                        orderMeal={[Function]}
                        toggleModal={null}
                        type="customer"
                      >
                        <div
                          className="meal-card order-meal-card"
                          id="meal-card"
                        >
                          <div
                            className="meal-card-header"
                          >
                            <img
                              alt="meal"
                              src="https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg?auto=compress&cs=tinysrgb&h=350"
                            />
                            <div
                              className="menu-card-title"
                            >
                              <p>
                                Vegetable Sharwama and Guava Smoothie
                              </p>
                            </div>
                          </div>
                          <div
                            className="meal-card-body"
                          >
                            <div>
                              <h3>
                                ₦ 
                                1200.00
                              </h3>
                              <p>
                                Sharwama contains no animal products, perfect for dieters
                              </p>
                            </div>
                            <div
                              className="meal-card-action"
                            >
                              <button
                                className="btn btn-sec meal-card-btn"
                                onClick={[Function]}
                              >
                                Click to Order
                              </button>
                            </div>
                          </div>
                        </div>
                      </MealCard>
                    </div>
                  </div>
                  <Cart
                    handleQuantityInputChange={[Function]}
                    order={Array []}
                    removeOrderItem={[Function]}
                  >
                    <div
                      className="side-cart-toggle d-none-xl"
                    >
                      <span
                        aria-hidden="true"
                        id="cart-toggler"
                        onClick={[Function]}
                      >
                        <div
                          className="text-center"
                        >
                          <img
                            alt="cart"
                            src="/img/cart.png"
                          />
                            
                          <sup>
                            0
                          </sup>
                        </div>
                        <p
                          className="text-center"
                        >
                          Total: ₦
                          0
                        </p>
                      </span>
                      <span
                        className="cart-btn"
                      >
                        <Link
                          href="/order-confirmation"
                          replace={false}
                          to="/order-confirmation"
                        >
                          <a
                            href="/order-confirmation"
                            onClick={[Function]}
                          >
                            <button
                              className="btn btn-pri btn-block checkout-btn"
                            >
                              Checkout
                            </button>
                          </a>
                        </Link>
                      </span>
                    </div>
                    <div
                      className="side-cart null"
                      id="side-cart"
                    >
                      <div
                        className="cart"
                      >
                        <div
                          className="cart-header"
                        >
                          <h2>
                            Your Cart
                          </h2>
                          <CloseIcon
                            btnID="side-cart-close-icon"
                            clickHandler={[Function]}
                            divClass="d-none-xl"
                          >
                            <div
                              className="close d-none-xl"
                            >
                              <Link
                                aria-hidden="true"
                                className={null}
                                clickHandler={[Function]}
                                id="side-cart-close-icon"
                              >
                                <button
                                  className="link-btn null"
                                  id="side-cart-close-icon"
                                  onClick={[Function]}
                                >
                                  ×
                                </button>
                              </Link>
                            </div>
                          </CloseIcon>
                        </div>
                        <hr />
                        <div
                          className="empty-cart"
                        >
                          <p>
                            Your Cart is Empty
                          </p>
                        </div>
                        <br />
                        <Link
                          href="/order-confirmation"
                          replace={false}
                          to="/order-confirmation"
                        >
                          <a
                            href="/order-confirmation"
                            onClick={[Function]}
                          >
                            <button
                              className="btn btn-pri btn-block checkout-btn"
                            >
                              Checkout
                            </button>
                          </a>
                        </Link>
                      </div>
                    </div>
                  </Cart>
                </div>
              </div>
            </div>
          </div>
          <Footer>
            <div
              className="footer"
            >
              <p>
                © 2018. Iveren Shaguy. All images were gotten from Google and are not mine.
              </p>
            </div>
          </Footer>
        </div>
      </View>
    </CustomerMenu>
  </Connect(CustomerMenu)>
</Provider>
`;

exports[`CustomerMenu renders correctly when not fetching 1`] = `
<View
  isFetching={false}
  logout={[MockFunction]}
  showTime={true}
  type="menu"
  user={
    Object {
      "email": "emiola@olasanmi.com",
      "firstname": "Emiola",
      "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
      "lastname": "Olasanmi",
      "role": "customer",
    }
  }
>
  <div
    className="content-wrapper meals user-meals"
  >
    <div
      className="user-menu"
    >
      <div
        className="main-menu"
      >
        <div
          className="page-heading"
        >
          <h2>
            Today's Menu
          </h2>
          <hr />
        </div>
        <React.Fragment>
          <div
            className="card-group meals-wrapper"
            id="card-group"
          >
            <MealCard
              key="81211c24-51c0-46ec-b1e0-18db55880958"
              meal={
                Object {
                  "description": "Jollof Rice, Beef and Plantain. 2 pieces of beef per plate",
                  "id": "81211c24-51c0-46ec-b1e0-18db55880958",
                  "imageURL": "http://www.preciouscore.com/wp-content/uploads/2017/11/How-to-cook-jollof-rice-in-the-oven-750x500.jpg",
                  "price": "1500.00",
                  "title": "Jollof Rice, Beef and Plantain",
                  "vegetarian": false,
                }
              }
              orderMeal={[Function]}
              toggleModal={null}
              type="customer"
            />
            <MealCard
              key="36d525d1-efc9-4b75-9999-3e3d8dc64ce3"
              meal={
                Object {
                  "description": "Sharwama contains no animal products, perfect for dieters",
                  "id": "36d525d1-efc9-4b75-9999-3e3d8dc64ce3",
                  "imageURL": "https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg?auto=compress&cs=tinysrgb&h=350",
                  "price": "1200.00",
                  "title": "Vegetable Sharwama and Guava Smoothie",
                  "vegetarian": true,
                }
              }
              orderMeal={[Function]}
              toggleModal={null}
              type="customer"
            />
          </div>
        </React.Fragment>
      </div>
      <Cart
        handleQuantityInputChange={[Function]}
        order={Array []}
        removeOrderItem={[Function]}
      />
    </div>
  </div>
</View>
`;

exports[`CustomerMenu renders message when not fetching and there are no meals on the menu 1`] = `
<View
  isFetching={true}
  logout={[MockFunction]}
  showTime={true}
  type="menu"
  user={
    Object {
      "email": "emiola@olasanmi.com",
      "firstname": "Emiola",
      "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
      "lastname": "Olasanmi",
      "role": "customer",
    }
  }
>
  <div
    className="content-wrapper meals user-meals"
  >
    <div
      className="user-menu"
    >
      <div
        className="main-menu"
      >
        <div
          className="page-heading"
        >
          <h2>
            Today's Menu
          </h2>
          <hr />
        </div>
        <React.Fragment>
          <p
            className="text-center"
          >
            There are no Meals on Today's Menu
          </p>
        </React.Fragment>
      </div>
      <Cart
        handleQuantityInputChange={[Function]}
        order={Array []}
        removeOrderItem={[Function]}
      />
    </div>
  </div>
</View>
`;

exports[`CustomerMenu renders message when shop is closed 1`] = `
<CustomerMenu
  fetchMenu={
    [MockFunction] {
      "calls": Array [
        Array [
          undefined,
        ],
      ],
    }
  }
  isFetching={false}
  logout={[MockFunction]}
  meals={
    Array [
      Object {
        "description": "Jollof Rice, Beef and Plantain. 2 pieces of beef per plate",
        "id": "81211c24-51c0-46ec-b1e0-18db55880958",
        "imageURL": "http://www.preciouscore.com/wp-content/uploads/2017/11/How-to-cook-jollof-rice-in-the-oven-750x500.jpg",
        "price": "1500.00",
        "title": "Jollof Rice, Beef and Plantain",
        "vegetarian": false,
      },
      Object {
        "description": "Sharwama contains no animal products, perfect for dieters",
        "id": "36d525d1-efc9-4b75-9999-3e3d8dc64ce3",
        "imageURL": "https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg?auto=compress&cs=tinysrgb&h=350",
        "price": "1200.00",
        "title": "Vegetable Sharwama and Guava Smoothie",
        "vegetarian": true,
      },
    ]
  }
  user={
    Object {
      "email": "emiola@olasanmi.com",
      "firstname": "Emiola",
      "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
      "lastname": "Olasanmi",
      "role": "customer",
    }
  }
>
  <View
    isFetching={false}
    logout={[MockFunction]}
    showTime={true}
    type="menu"
    user={
      Object {
        "email": "emiola@olasanmi.com",
        "firstname": "Emiola",
        "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
        "lastname": "Olasanmi",
        "role": "customer",
      }
    }
  >
    <div
      className="admin user"
    >
      <Header
        active="menu"
        dateType="menu"
        logout={[MockFunction]}
        showTime={true}
        type="customer"
        user={
          Object {
            "email": "emiola@olasanmi.com",
            "firstname": "Emiola",
            "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
            "lastname": "Olasanmi",
            "role": "customer",
          }
        }
      >
        <div
          className="header"
        >
          <div
            className="navbar white-navbar"
          >
            <CustomerHeader
              active="menu"
              dateType="menu"
              logout={[MockFunction]}
              showTime={true}
              type="customer"
              user={
                Object {
                  "email": "emiola@olasanmi.com",
                  "firstname": "Emiola",
                  "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
                  "lastname": "Olasanmi",
                  "role": "customer",
                }
              }
            >
              <div
                className="page-title"
              >
                <h3>
                  <Link
                    href="/"
                    replace={false}
                    to="/"
                  >
                    <a
                      href="/"
                      onClick={[Function]}
                    >
                      BOOK-A-MEAL
                    </a>
                  </Link>
                </h3>
              </div>
              <div
                className="navlinks"
              >
                <div
                  className="user-info"
                >
                  <Dropdown
                    content={
                      <UNDEFINED>
                        <Link
                          className="active"
                          href="/"
                          replace={false}
                          to="/"
                        >
                          Menu
                        </Link>
                        <Link
                          href="/"
                          replace={false}
                          to="/"
                        >
                          Order History
                        </Link>
                        <Link
                          href="/"
                          onClick={[MockFunction]}
                          replace={false}
                          to="/"
                        >
                          Logout
                        </Link>
                      </UNDEFINED>
                    }
                    toggler={
                      <div
                        className="username-circle circle-click"
                      >
                        <p
                          className="circle-click"
                        >
                          E
                          ▿
                        </p>
                      </div>
                    }
                    type="customer"
                  >
                    <div
                      className="dropdown"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <Link
                        className="link"
                        clickHandler={[Function]}
                        id="dropdown-toggler"
                      >
                        <button
                          className="link-btn link"
                          id="dropdown-toggler"
                          onClick={[Function]}
                        >
                          <div
                            className="username-circle circle-click"
                          >
                            <p
                              className="circle-click"
                            >
                              E
                              ▿
                            </p>
                          </div>
                        </button>
                      </Link>
                      <div
                        className="dropdown-content"
                        id="dropdown-content"
                      >
                        <Link
                          className="active"
                          href="/"
                          replace={false}
                          to="/"
                        >
                          <a
                            className="active"
                            href="/"
                            onClick={[Function]}
                          >
                            Menu
                          </a>
                        </Link>
                        <Link
                          href="/"
                          replace={false}
                          to="/"
                        >
                          <a
                            href="/"
                            onClick={[Function]}
                          >
                            Order History
                          </a>
                        </Link>
                        <Link
                          href="/"
                          onClick={[MockFunction]}
                          replace={false}
                          to="/"
                        >
                          <a
                            href="/"
                            onClick={[Function]}
                          >
                            Logout
                          </a>
                        </Link>
                      </div>
                    </div>
                  </Dropdown>
                  <p>
                      
                    Emiola
                  </p>
                </div>
              </div>
            </CustomerHeader>
          </div>
        </div>
      </Header>
      <div
        className="content"
      >
        <div
          className="content-wrapper"
          id="has-modal"
        >
          <div
            className="content-wrapper meals user-meals"
          >
            <div
              className="user-menu"
            >
              <div
                className="main-menu"
              >
                <div
                  className="page-heading"
                >
                  <h2>
                    Today's Menu
                  </h2>
                  <hr />
                </div>
                <Notification
                  message="Ordering is not available between 4:00pm and 8:30am. Please check back later."
                >
                  <div
                    className="notification-pill"
                  >
                    <p
                      className="text-center notif"
                    >
                      Ordering is not available between 4:00pm and 8:30am. Please check back later.
                    </p>
                  </div>
                </Notification>
                <div
                  className="card-group meals-wrapper"
                  id="card-group"
                >
                  <MealCard
                    key="81211c24-51c0-46ec-b1e0-18db55880958"
                    meal={
                      Object {
                        "description": "Jollof Rice, Beef and Plantain. 2 pieces of beef per plate",
                        "id": "81211c24-51c0-46ec-b1e0-18db55880958",
                        "imageURL": "http://www.preciouscore.com/wp-content/uploads/2017/11/How-to-cook-jollof-rice-in-the-oven-750x500.jpg",
                        "price": "1500.00",
                        "title": "Jollof Rice, Beef and Plantain",
                        "vegetarian": false,
                      }
                    }
                    orderMeal={[Function]}
                    toggleModal={null}
                    type="customer"
                  >
                    <div
                      className="meal-card order-meal-card"
                      id="meal-card"
                    >
                      <div
                        className="meal-card-header"
                      >
                        <img
                          alt="meal"
                          src="http://www.preciouscore.com/wp-content/uploads/2017/11/How-to-cook-jollof-rice-in-the-oven-750x500.jpg"
                        />
                        <div
                          className="menu-card-title"
                        >
                          <p>
                            Jollof Rice, Beef and Plantain
                          </p>
                        </div>
                      </div>
                      <div
                        className="meal-card-body"
                      >
                        <div>
                          <h3>
                            ₦ 
                            1500.00
                          </h3>
                          <p>
                            Jollof Rice, Beef and Plantain. 2 pieces of beef per plate
                          </p>
                        </div>
                      </div>
                    </div>
                  </MealCard>
                  <MealCard
                    key="36d525d1-efc9-4b75-9999-3e3d8dc64ce3"
                    meal={
                      Object {
                        "description": "Sharwama contains no animal products, perfect for dieters",
                        "id": "36d525d1-efc9-4b75-9999-3e3d8dc64ce3",
                        "imageURL": "https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg?auto=compress&cs=tinysrgb&h=350",
                        "price": "1200.00",
                        "title": "Vegetable Sharwama and Guava Smoothie",
                        "vegetarian": true,
                      }
                    }
                    orderMeal={[Function]}
                    toggleModal={null}
                    type="customer"
                  >
                    <div
                      className="meal-card order-meal-card"
                      id="meal-card"
                    >
                      <div
                        className="meal-card-header"
                      >
                        <img
                          alt="meal"
                          src="https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg?auto=compress&cs=tinysrgb&h=350"
                        />
                        <div
                          className="menu-card-title"
                        >
                          <p>
                            Vegetable Sharwama and Guava Smoothie
                          </p>
                        </div>
                      </div>
                      <div
                        className="meal-card-body"
                      >
                        <div>
                          <h3>
                            ₦ 
                            1200.00
                          </h3>
                          <p>
                            Sharwama contains no animal products, perfect for dieters
                          </p>
                        </div>
                      </div>
                    </div>
                  </MealCard>
                </div>
              </div>
              <Cart
                handleQuantityInputChange={[Function]}
                order={Array []}
                removeOrderItem={[Function]}
              >
                <div
                  className="side-cart-toggle d-none-xl"
                >
                  <span
                    aria-hidden="true"
                    id="cart-toggler"
                    onClick={[Function]}
                  >
                    <div
                      className="text-center"
                    >
                      <img
                        alt="cart"
                        src="/img/cart.png"
                      />
                        
                      <sup>
                        0
                      </sup>
                    </div>
                    <p
                      className="text-center"
                    >
                      Total: ₦
                      0
                    </p>
                  </span>
                </div>
                <div
                  className="side-cart null"
                  id="side-cart"
                >
                  <div
                    className="cart"
                  >
                    <div
                      className="cart-header"
                    >
                      <h2>
                        Your Cart
                      </h2>
                      <CloseIcon
                        btnID="side-cart-close-icon"
                        clickHandler={[Function]}
                        divClass="d-none-xl"
                      >
                        <div
                          className="close d-none-xl"
                        >
                          <Link
                            aria-hidden="true"
                            className={null}
                            clickHandler={[Function]}
                            id="side-cart-close-icon"
                          >
                            <button
                              className="link-btn null"
                              id="side-cart-close-icon"
                              onClick={[Function]}
                            >
                              ×
                            </button>
                          </Link>
                        </div>
                      </CloseIcon>
                    </div>
                    <hr />
                    <div
                      className="empty-cart"
                    >
                      <p>
                        Your Cart is Empty
                      </p>
                    </div>
                    <br />
                  </div>
                </div>
              </Cart>
            </div>
          </div>
        </div>
      </div>
      <Footer>
        <div
          className="footer"
        >
          <p>
            © 2018. Iveren Shaguy. All images were gotten from Google and are not mine.
          </p>
        </div>
      </Footer>
    </div>
  </View>
</CustomerMenu>
`;
